fix: remove overflow issues and polish

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ header h1 {
 
 footer {
   width: 100%;
-  background-color: #444;
+  background-color: #4D5057;
   color: #aaa;
   font-size: 0.8rem;
   letter-spacing: 1px;
@@ -77,16 +77,37 @@ footer {
 
 main {  
   display: flex;
-  flex-direction: column;
-  width: 100%; 
+  flex-direction: column;  
+  width: 100%;
+  flex: 1;
 }
 
-.filter-panel {
+.map-container {
+  order: 1;
+  height: 300px;
+  width: 100%;
+  background-color: #ccc; 
+}
+
+#map {
+  height: 100%;
+  width: 100%;
+}
+
+.restaurant-container {
+  order: 2;
+  width: 100%;
+  height: 100%;  
+  display: flex;
+  flex-direction: column;
+  background-color: #3A3D45;
+}
+
+.filter-panel {  
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #3A3D45;
 }
 
 .filter-panel-collapsible {
@@ -127,41 +148,19 @@ main {
   margin-bottom: 10px;
 }
 
-.content-container {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  order: 2;
-}
-
-.map-container {
-  order: 1;
-  height: 300px;
-  width: 100%;
-  background-color: #ccc; 
-}
-
-#map {
-  height: 100%;
-  width: 100%;
-}
-
 .restaurants-list-panel {
   order: 2;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
+  margin: 0;
 }
 
 #restaurants-list {  
   width: 100%;
-  padding: 10px 0 10px;
-  display: flex;
-  flex-direction: column;
+  height: 100%;
+  margin: 0;
+  padding: 0 0 10px;
   box-sizing: border-box; 
   background-color: #f3f3f3;
   list-style: outside none none;
-  margin: 0;
 }
 
 #restaurants-list li {
@@ -172,7 +171,7 @@ main {
   padding: 0;
   text-align: left;
   width: 100%;
- box-sizing: border-box;
+  box-sizing: border-box;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -212,43 +211,42 @@ main {
   box-sizing: border-box;
 }
 
-@media screen and (min-width: 500px) {
-  /*shift from logo on top and title beneath to logo to the left and title to the right*/
+@media screen and (min-width: 500px) {  
   header h1 {
     text-align: left;
     padding-left: 10px;
   }
 
-  body {    
+  body, html {    
     margin: 0;
-    height: 100vh;    
+    height: 100vh;
   }
 
   main {
     flex: 1;
-    overflow: auto;
-  }
-
-  .content-container {
+    overflow: hidden; /* make main content unscrollable */
     flex-direction: row;
-    height: 100%;    
   }
 
-  .restaurants-list-panel {
-    order: 1;
+  .restaurant-container {
+    order: 1;    
     width: 33%;
-    flex: 1;
-    overflow: auto;
-  }
-
-  #restaurants-list {   
-    padding: 10px;
+    min-width: 200px;
+    max-width: 400px;
   }
 
   .map-container {
     order: 2;
-    width: 67%;
     height: 100%;
+  }
+
+  .restaurants-list-panel {
+    overflow: auto;
+  }
+
+  #restaurants-list {
+    padding: 0 10px 10px;
+    background-color: unset;    
   }
 }
 
